--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,6 +1,10 @@
 .header__lang-link {
   width: 30px;
   height: 28px;
+  padding: 0;
+  margin: 0;
+  padding-top: 46px;
+  padding-right: 18px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
