--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,8 +1,7 @@
 .lead__image {
   width: 984px;
   height: 615px;
-  padding-top: 64px;
-  padding-bottom: 8px;
+  padding: 64px 148px 8px;
   margin-left: auto;
   margin-right: auto;
 }
