--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,6 +1,6 @@
 .lead__caption {
-  width: 158px;
-  height: 14px;
+  max-width: 158px;
+  max-height: 14px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
@@ -9,5 +9,5 @@
   /* identical to box height, or 140% */
   letter-spacing: 0.15em;
   text-transform: uppercase;
-  color: #FFFFFF;
+
 }
