--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,7 +1,11 @@
 .photo-grid {
   width: 1184px;
   height: 671px;
-  margin-right: auto;
-  margin-left: auto;
+  margin-right: 48px;
+  margin-left: 48px;
+  padding-bottom: 92px;
   display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
+  gap: 16px;
 }
