--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -4,7 +4,7 @@
   max-height: 6875px;
   min-height: 6875px;
   margin: 0 auto;
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Inter', Arial, sans-serif;
   background-color: #2A2C2F;
   color: #FFFFFF;
 }
