--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -2,4 +2,7 @@
   width: 984px;
   height: 660px;
   padding-bottom: 80px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
 }
