--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,14 +3,16 @@
   height: 28px;
   padding: 0;
   margin: 0;
-  padding-top: 46px;
-  padding-right: 18px;
+  padding-left: 18px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
-  text-align: right;
   text-decoration-line: underline;
   color: #FFFFFF;
+}
+
+.header__lang-link:last-child {
+  text-decoration-line: none;
 }
