--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -1,10 +1,8 @@
 .intro__list {
-  width: 690px;
-  height: 90px;
+  max-width: 690px;
+  max-height: 90px;
   margin: 0;
   padding: 0;
-  left: 148px;
-  top: 1572px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 700;
@@ -12,5 +10,4 @@
   line-height: 18px;
   list-style: none;
   /* or 150% */
-  color: #FFFFFF;
 }
