--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -1,9 +1,8 @@
 .intro__text {
-  width: 690px;
-  height: 208px;
+  max-width: 690px;
+  max-height: 208px;
   padding: 0;
   margin: 0;
-
   padding-bottom: 33px;
   font-family: 'Inter';
   font-style: normal;
@@ -11,6 +10,4 @@
   font-size: 16px;
   line-height: 163%;
   /* or 26px */
-  color: #FFFFFF;
-
 }
