--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,6 +1,6 @@
 .intro__title {
-  width: 690px;
-  height: 58px;
+  max-width: 690px;
+  max-height: 58px;
   padding: 0;
   margin: 0;
   font-family: 'Inter';
@@ -9,7 +9,6 @@
   font-size: 54px;
   line-height: 58px;
   /* identical to box height, or 107% */
-  color: #FFFFFF;
   padding-bottom: 40px;
 
 }
