--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,6 +1,6 @@
 .lead__image {
   width: 984px;
   height: 615px;
-  padding: 64px 148px 8px;
-object-fit: cover;
+  padding: 64px 0 8px;
+  object-fit: cover;
 }
