--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,6 +1,8 @@
 .lead__title {
-  width: 720px;
-  height: 200px;
+  margin: 0;
+  padding: 0;
+  max-width: 720px;
+  max-height: 200px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 900;
@@ -8,7 +10,7 @@
   line-height: 100px;
   /* or 104% */
   text-align: center;
-  color: #FFFFFF;
   padding-bottom: 32px;
-
+  margin-left: auto;
+  margin-right: auto;
 }
