--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,6 @@
 .lead {
   width: 984px;
   height: 1005px;
-  padding-bottom: 92px;
-  padding-right: 148px;
+  padding: 0 148px 92px;
+  display: block;
 }
