--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,12 +1,12 @@
 .place__paragraph {
   margin: 0;
   padding: 0;
-  width: 484px;
-
+  max-width: 484px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 163%;
   /* or 29px */
+  padding-bottom: 26px;
 }
