--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -2,8 +2,8 @@
 /* __title */
 margin: 0;
 padding: 0;
-width: 460px;
-height: 152px;
+max-width: 460px;
+max-height: 152px;
 font-family: 'Inter';
 font-style: normal;
 font-weight: 900;
