--- a/blocks/place/__website/_url-heading/place__website_url-heading.css
+++ b/blocks/place/__website/_url-heading/place__website_url-heading.css
@@ -1,17 +1,17 @@
 .place__website_heading {
   /* __url-heading */
-
-
+  margin: 0;
+  padding: 0;
   width: 456px;
   height: 12px;
-
-
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
   line-height: 12px;
   /* identical to box height, or 100% */
-  letter-spacing: 0.2em;
+  color: #AAAAAA;
+
+
 
 }
