--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -2,7 +2,7 @@
   /* __subtitle */
   padding: 0;
   margin: 0;
-  width: 360px;
+  max-width: 360px;
   height: 66px;
   font-family: 'Inter';
   font-style: normal;
