--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,6 +1,6 @@
 .place__paragraph {
   margin: 0;
-  padding: 0;
+  padding: 0 0 26px;
   max-width: 484px;
   font-family: 'Inter';
   font-style: normal;
@@ -8,5 +8,4 @@
   font-size: 18px;
   line-height: 163%;
   /* or 29px */
-  padding-bottom: 26px;
 }
