--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -3,7 +3,9 @@
   padding: 0;
   margin: 0;
   max-width: 360px;
-  height: 66px;
+  position: absolute;
+  top: 429px;
+  left: 412px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
