--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,11 +1,7 @@
 .cover {
   /* cover */
-width: 1184px;
-min-height: 740px;
-margin: 0 48px 92px;
-position: relative;
-background: url(../../../images/cover-trains.jpg);
-  object-fit: cover;
-  z-index: 0;
-  opacity: 0.3;
+  width: 1184px;
+  height: 740px;
+  padding: 0 48px 92px;
+  position: relative;
 }
