--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,11 +1,13 @@
 .footer__copyright {
-  width: 186px;
-  height: 16px;
+  margin: 0;
+  padding: 0;
+  max-width: 186px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 16px;
   /* identical to box height, or 114% */
-  text-align: right;
+  text-align: center;
+
 }
