--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,11 +1,13 @@
-.footer {
-  width: 50px;
-  height: 18px;
+.footer__link {
+  margin: 0;
+  padding: 0 18px 0 0 ;
+  max-width: 50px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
-    line-height: 18px;
+  line-height: 18px;
 /* identical to box height, or 112% */
   color: #FFFFFF;
+  text-decoration-line: none;
 }
