--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,7 @@
 .footer {
   width: 1184px;
   height: 18px;
-  padding-bottom: 24px;
+  margin: 0 48px 24px;
+  display: flex;
+  justify-content: space-between;
 }
