--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,13 @@
 .header {
-  width: 1184px;
-  height: 52px;
+  max-width: 1184px;
   padding: 28px 48px 56px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+@media screen and (max-width: 1024px) {
+  .header {
+    padding-bottom: 48px;
+  }
 }
