--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,12 @@
 .intro {
   width: 690px;
   height: 429px;
-  margin-bottom: 92px;
+  padding-bottom: 92px;
   padding-left: 148px;
+}
+
+@media screen and (max-width: 1024px) {
+  .intro {
+    padding-left: 48px;
+  }
 }
