--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,6 +1,14 @@
 .lead__image {
-  width: 984px;
-  height: 615px;
+  max-width: 984px;
+  min-height: 615px;
   padding: 64px 0 8px;
   object-fit: cover;
+}
+
+@media screen and (max-width: 1024px) {
+  .lead__image {
+    max-width: 928px;
+    min-height: 580px;
+    padding: 56px 0 8px;
+  }
 }
