--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -4,3 +4,9 @@
   padding: 0 148px 92px;
   display: block;
 }
+
+@media screen and (max-width: 1024px) {
+  .lead {
+    padding: 0 48px 92px;
+  }
+}
