--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,5 +1,10 @@
 .photo-grid__item {
   width: 284px;
-  height: 213px;
   object-fit: cover;
+}
+
+@media screen and (max-width: 1024px) {
+  .photo-grid__item {
+    width: 300px;
+  }
 }
