--- a/blocks/place/__website/_link/place__website_link.css
+++ b/blocks/place/__website/_link/place__website_link.css
@@ -2,8 +2,7 @@
   /* __link */
   margin: 0;
   padding: 0;
-  width: 456px;
-  height: 22px;
+  max-width: 456px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
@@ -12,4 +11,10 @@
   /* identical to box height, or 122% */
   text-decoration-line: underline;
   color: #FFFFFF;
+  transition: opacity .3s ease;
+}
+
+.place__website_link:hover {
+  opacity: .8;
+
 }
