--- a/blocks/place/__website/_url-heading/place__website_url-heading.css
+++ b/blocks/place/__website/_url-heading/place__website_url-heading.css
@@ -1,9 +1,8 @@
-.place__website_heading {
+.place__website_url-heading {
   /* __url-heading */
   margin: 0;
-  padding: 0;
-  width: 456px;
-  height: 12px;
+  padding: 0 0 12px;
+  max-width: 456px;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
@@ -11,7 +10,4 @@
   line-height: 12px;
   /* identical to box height, or 100% */
   color: #AAAAAA;
-
-
-
 }
