--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,7 +1,8 @@
 .place__website {
   /* __website */
-
   width: 456px;
-  height: 46px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 
 }
