--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -14,5 +14,28 @@
   /* or 122% */
   text-align: center;
   z-index: 1;
+}
 
+@media screen and (max-width: 1024px) {
+  .cover__subtitle{
+    top: 379px;
+    left: 332px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover__subtitle{
+    top: 299px;
+    left: 204px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover__subtitle{
+    max-width: 288px;
+    top: 119px;
+    left: 16px;
+    font-size: 14px;
+    line-height: 16px;
+  }
 }
