--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,7 +1,23 @@
 .cover {
   /* cover */
-  width: 1184px;
-  height: 740px;
   padding: 0 48px 92px;
   position: relative;
+}
+
+@media screen and (max-width: 1024px) {
+  .cover{
+    padding: 0 0 92px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .cover{
+    padding: 0 0 88px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .cover{
+    padding: 0 0 64px;
+  }
 }
