--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -9,5 +9,13 @@
   line-height: 16px;
   /* identical to box height, or 114% */
   text-align: center;
+}
 
+@media screen and (max-width: 320px) {
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 14px;
+    text-align: start;
+    padding-top: 48px;
+  }
 }
