--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,7 +1,6 @@
 .footer__link {
   margin: 0;
-  padding: 0 18px 0 0 ;
-  max-width: 50px;
+  padding: 0 18px 0 0;
   font-family: 'Inter';
   font-style: normal;
   font-weight: 400;
@@ -10,4 +9,17 @@
 /* identical to box height, or 112% */
   color: #FFFFFF;
   text-decoration-line: none;
+}
+
+.footer__link:last-child {
+  padding: 0;
+}
+
+@media screen and (max-width: 320px) {
+  .footer__link {
+    width: 158px;
+    font-size: 24px;
+    line-height: 24px;
+    padding: 0 0 32px;
+  }
 }
