--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,31 @@
 .footer {
-  width: 1184px;
-  height: 18px;
-  margin: 0 48px 24px;
+  max-width: 1184px;
+  padding: 0 48px 24px;
   display: flex;
   justify-content: space-between;
+}
+
+@media screen and (max-width: 1024px) {
+  .footer {
+    max-width: 928px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    max-width: 720px;
+    padding: 0 24px 24px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .footer {
+    max-width: 186px;
+
+    display: block;
+    justify-content:left;
+    padding: 0 16px 24px;
+
+
+  }
 }
