--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,6 +1,5 @@
 .header__lang-link {
-  width: 30px;
-  height: 28px;
+  max-width: 30px;
   padding: 0;
   margin: 0;
   padding-left: 18px;
@@ -15,4 +14,12 @@
 
 .header__lang-link:last-child {
   text-decoration-line: none;
+}
+
+@media screen and (max-width: 320px) {
+  .header__lang-link {
+    max-width: 22px;
+    font-size: 18px;
+    line-height: 20px;
+  }
 }
