--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,5 @@
 .intro {
-  width: 690px;
-  height: 429px;
+  max-width: 690px;
   padding-bottom: 92px;
   padding-left: 148px;
 }
@@ -8,5 +7,19 @@
 @media screen and (max-width: 1024px) {
   .intro {
     padding-left: 48px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .intro {
+    max-width: 720px;
+    padding: 0 24px 88px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .intro {
+    max-width: 288px;
+    padding: 0 16px 64px;
   }
 }
