--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -1,6 +1,6 @@
 .lead__title {
   margin: 0;
-  padding: 0;
+  padding: 0 28px 0;
   max-width: 720px;
   font-family: 'Inter';
   font-style: normal;
@@ -13,3 +13,19 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+@media screen and (max-width: 768px) {
+  .lead__title {
+    padding: 0 28px 32px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead__title {
+    max-width: 288px;
+    padding-bottom: 16px;
+    font-size: 40px;
+    line-height: 44px;
+  }
+}
+
