--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,6 +1,5 @@
 .lead {
-  width: 984px;
-  height: 1005px;
+  max-width: 984px;
   padding: 0 148px 92px;
   display: block;
 }
@@ -8,5 +7,17 @@
 @media screen and (max-width: 1024px) {
   .lead {
     padding: 0 48px 92px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .lead {
+    padding: 0 0 88px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .lead {
+    padding: 0 2px 64px;
   }
 }
