--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,6 +1,6 @@
 .photo-grid {
-  width: 1184px;
-  margin: 0 48px 92px;
+  max-width: 1184px;
+  padding: 0 48px 92px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(3, 1fr);
@@ -9,9 +9,26 @@
 
 @media screen and (max-width: 1024px) {
   .photo-grid {
-    width: 928px;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
     gap: 14px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .photo-grid {
+    padding: 0 24px 88px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+    gap: 14px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .photo-grid {
+    padding: 0 16px 64px;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+    gap: 12px;
   }
 }
