--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -4,5 +4,23 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+}
 
+@media screen and (max-width: 1024px) {
+  .place__website {
+    max-width: 440px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place__website {
+    max-width: 352px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place__website {
+    max-width: 288px;
+    padding: 0 16px 0;
+  }
 }
