--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,9 +1,38 @@
 .place {
-  width: 984px;
-  height: 660px;
+  max-width: 984px;
   padding-bottom: 80px;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(2, max-content 1fr);
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: max-content 1fr;
   gap: 48px 40px;
+  grid-auto-flow:
+}
+
+.place:last-child {
+  padding-bottom: 0;
+}
+
+@media screen and (max-width: 1024px) {
+  .place {
+    max-width: 928px;
+    gap: 48px 32px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .place {
+    max-width: 720px;
+    gap: 48px 28px;
+    padding-bottom: 73px;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .place {
+    max-width: 320px;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    gap: 32px;
+    padding-bottom: 50px;
+  }
 }
