--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,5 +1,23 @@
 .places {
   max-width: 984px;
-  min-height: 3392px;
-  margin: 0 148px 92px;
+  padding: 0 148px 92px;
 }
+
+@media screen and (max-width: 1024px) {
+  .places {
+    max-width: 928px;
+    padding: 0 48px 92px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .places {
+    max-width: 720px;
+    padding: 0 24px 90px;
+  }
+
+  @media screen and (max-width: 320px) {
+    .places {
+      max-width: 320px;
+      padding: 0 0 66px;
+    }
