Третья работа версия 0.97

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -22,7 +22,8 @@
   .footer {
     max-width: 186px;
 
-    display: block;
+    display: flex;
+    flex-direction: column;
     justify-content:left;
     padding: 0 16px 24px;
 
