--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,11 +1,12 @@
 .header__logo {
-  width: 176px;
-  height: 52px;
+  
+  min-height: 52px;
+  background-color:brown;
 }
 
 @media screen and (max-width: 320px) {
   .header__logo {
-    width: 142px;
-    height: 42px;
+    
+    min-height: 42px;
   }
 }
