--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,5 +1,6 @@
 .header {
   max-width: 1184px;
+  background-color:aqua;
   padding: 28px 48px 56px;
   display: flex;
   justify-content: space-between;
@@ -14,12 +15,14 @@
 
 @media screen and (max-width: 768px) {
   .header {
+    max-width: 768px;
     padding: 28px 28px 48px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .header {
+    max-width: 288px;
     padding: 16px 16px 48px;
   }
 }
