--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,5 +1,5 @@
 .photo-grid {
-  max-width: 1184px;
+  width: calc(100%-96px);
   padding: 0 48px 92px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
