--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,13 +1,22 @@
 .footer__copyright {
   margin: 0;
   padding: 0;
-  max-width: 186px;
+  
   font-style: normal;
   font-weight: 400;
   font-size: 14px;
   line-height: 16px;
   /* identical to box height, or 114% */
   text-align: center;
+}
+
+@media screen and (max-width: 682px) {
+  .footer__copyright {
+    font-size: 14px;
+    line-height: 14px;
+    text-align: start;
+    padding-top: 48px;
+  }
 }
 
 @media screen and (max-width: 320px) {
