--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -14,6 +14,13 @@
   padding: 0;
 }
 
+@media screen and (max-width: 682px) {
+  .footer__link {
+    font-size: 24px;
+    line-height: 24px;
+    padding: 0 0 32px;
+  }
+}
 
 @media screen and (max-width: 320px) {
   .footer__link {
