--- a/blocks/footer/__nav/footer__nav.css
+++ b/blocks/footer/__nav/footer__nav.css
@@ -1,3 +1,10 @@
+@media screen and (max-width: 682px) {
+  .footer__nav {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .footer__nav {
     display: flex;
