--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,5 +1,7 @@
 .footer {
+  margin: 0 auto;
   max-width: 1184px;
+  
   padding: 0 48px 24px;
   display: flex;
   justify-content: space-between;
@@ -13,10 +15,21 @@
 
 @media screen and (max-width: 768px) {
   .footer {
-    max-width: 720px;
+    max-width: 700px;
     padding: 0 24px 24px;
   }
 }
+
+@media screen and (max-width: 682px) {
+  .footer {
+    max-width: 186px;
+    display: flex;
+    flex-direction: column;
+    justify-content:left;
+    padding: 0 24px 24px;
+  }
+}
+
 
 @media screen and (max-width: 320px) {
   .footer {
