--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -1,5 +1,4 @@
 .header__lang-link {
-  max-width: 30px;
   padding: 0;
   margin: 0;
   padding-left: 18px;
@@ -7,17 +6,13 @@
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
-  text-decoration-line: underline;
-  color: #FFFFFF;
-}
-
-.header__lang-link:last-child {
   text-decoration-line: none;
+  color: #FFFFFF;
+  text-align: center;
 }
 
 @media screen and (max-width: 320px) {
   .header__lang-link {
-    max-width: 22px;
     font-size: 18px;
     line-height: 20px;
   }
