--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -1,5 +1,4 @@
 .intro__title {
-  max-width: 690px;
   padding: 0;
   margin: 0;
   font-style: normal;
@@ -10,7 +9,7 @@
   padding-bottom: 40px;
 }
 
-@media screen and (max-width: 320px) {
+@media (max-width: 320px) {
   .intro__title {
     font-size: 32px;
     line-height: 35px;
