--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,14 +1,14 @@
 .lead__image {
   max-width: 984px;
-  min-height: 615px;
   padding: 64px 0 8px;
   object-fit: cover;
+  box-sizing: content-box;
 }
 
 @media screen and (max-width: 1024px) {
   .lead__image {
     max-width: 928px;
-    min-height: 580px;
+    
     padding: 56px 0 8px;
   }
 }
@@ -16,15 +16,31 @@
 @media screen and (max-width: 768px) {
   .lead__image {
     max-width: 768px;
-    min-height: 480px;
+    
+    padding: 56px 0 8px;
+  }
+}
+
+@media screen and (max-width: 725px) {
+  .lead__image {
+    max-width: 725px;
+    
+    padding: 56px 0 8px;
+  }
+}
+
+
+@media screen and (max-width: 425px) {
+  .lead__image {
+    max-width: 425px;
+    
     padding: 56px 0 8px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .lead__image {
-    max-width: 320px;
-    min-height: 200px;
-    padding: 40px 0 8px;
+    max-width: 300px;
+    padding: 40px 0px 8px;
   }
 }
