--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -12,9 +12,17 @@
   margin-left: auto;
 }
 
+@media screen and (max-width: 725px) {
+  .lead__subtitle {
+    max-width: 320px;
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
 @media screen and (max-width: 320px) {
   .lead__subtitle {
-    max-width: 288px;
+    max-width: 280px;
     font-size: 16px;
     line-height: 20px;
   }
