--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -9,20 +9,32 @@
   /* or 104% */
   text-align: center;
   padding-bottom: 32px;
+  
   margin-left: auto;
   margin-right: auto;
+  
 }
 
 @media screen and (max-width: 768px) {
   .lead__title {
-    padding: 0 28px 32px;
+    padding: 0 24px 32px;
+    
+  }
+}
+
+@media screen and (max-width: 725px) {
+  .lead__title {
+    padding: 0 20px 32px;
+    max-width: 280px;
+    font-size: 40px;
+    line-height: 44px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .lead__title {
-    max-width: 288px;
-    padding-bottom: 16px;
+    max-width: 280px;
+    padding: 0 16px 16px;
     font-size: 40px;
     line-height: 44px;
   }
