--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,23 +1,28 @@
 .lead {
+  margin: 0 auto;
   max-width: 984px;
   padding: 0 148px 92px;
-  display: block;
+  
+ 
 }
 
 @media screen and (max-width: 1024px) {
   .lead {
+    max-width: 928px;
     padding: 0 48px 92px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .lead {
+    max-width: 768px;
     padding: 0 0 88px;
   }
 }
 
 @media screen and (max-width: 320px) {
   .lead {
+    max-width: none;
     padding: 0 2px 64px;
   }
 }
