--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -3,19 +3,19 @@
   object-fit: cover;
 }
 
-@media screen and (max-width: 1024px) {
+@media (max-width: 1024px) {
   .photo-grid__item {
     max-width: 300px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .photo-grid__item {
     max-width: 352px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media (max-width: 320px) {
   .photo-grid__item {
     max-width: 288px;
   }
