--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,13 +1,14 @@
 .photo-grid {
-  width: calc(100%-96px);
+  max-width: 1184px;
   padding: 0 48px 92px;
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, minmax(220px, 284px));
   grid-template-rows: repeat(3, 1fr);
   gap: 16px;
+  
 }
 
-@media screen and (max-width: 1024px) {
+@media (max-width: 1024px) {
   .photo-grid {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, 1fr);
@@ -15,8 +16,9 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .photo-grid {
+    
     padding: 0 24px 88px;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(6, 1fr);
@@ -24,8 +26,9 @@
   }
 }
 
-@media screen and (max-width: 320px) {
+@media (max-width: 320px) {
   .photo-grid {
+   
     padding: 0 16px 64px;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(12, 1fr);
