--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,6 +1,6 @@
 .place__website {
   /* __website */
-  width: 456px;
+  max-width: 456px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
