--- a/blocks/photo-grid/__item/photo-grid__item.css
+++ b/blocks/photo-grid/__item/photo-grid__item.css
@@ -1,22 +1,5 @@
 .photo-grid__item {
-  max-width: 284px;
+  max-width: 100%;
   object-fit: cover;
 }
 
-@media (max-width: 1024px) {
-  .photo-grid__item {
-    max-width: 300px;
-  }
-}
-
-@media (max-width: 768px) {
-  .photo-grid__item {
-    max-width: 352px;
-  }
-}
-
-@media (max-width: 320px) {
-  .photo-grid__item {
-    max-width: 288px;
-  }
-}
