--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -18,7 +18,6 @@
 
 @media (max-width: 768px) {
   .photo-grid {
-    
     padding: 0 24px 88px;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(6, 1fr);
@@ -26,9 +25,17 @@
   }
 }
 
-@media (max-width: 320px) {
+@media (max-width: 445px) {
   .photo-grid {
-   
+    padding: 0 16px 64px;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+    gap: 12px;
+  }
+}
+
+@media (max-width: 320px) {
+  .photo-grid {  
     padding: 0 16px 64px;
     grid-template-columns: repeat(1, 1fr);
     grid-template-rows: repeat(12, 1fr);
