--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,23 +1,23 @@
 .place__image {
   /* __image */
-  max-width: 460px;
+  max-width: 100%;
   object-fit: cover;
 }
 
-@media screen and (max-width: 1024px) {
+/*@media screen and (max-width: 1024px) {
   .place__image {
-    max-width: 440px;
+    max-width: 100%;
   }
 }
 
 @media screen and (max-width: 768px) {
   .place__image {
-    max-width: 340px;
+    max-width: 100%;
   }
 }
 
 @media screen and (max-width: 320px) {
   .place__image {
-    max-width: 320px;
+    max-width: 100%;
   }
-}
+}*/
