--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,7 +1,7 @@
 .place__paragraph {
   margin: 0;
   padding: 0 0 26px;
-  max-width: 484px;
+  max-width: 100%;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
@@ -15,14 +15,14 @@
 
 @media screen and (max-width: 1024px) {
   .place__paragraph {
-    max-width: 456px;
+    max-width: 100%;
     padding: 0 0 27px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .place__paragraph {
-    max-width: 352px;
+    max-width: 100%;
     padding: 0 0 25px;
     font-size: 16px;
   }
@@ -30,7 +30,7 @@
 
 @media screen and (max-width: 320px) {
   .place__paragraph {
-    max-width: 288px;
+    max-width: 100%;
     padding: 0 16px 25px;
     font-size: 16px;
   }
