--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,7 @@
 .footer {
   margin: 0 auto;
   max-width: 1184px;
-  
+  box-sizing: border-box;
   padding: 0 48px 24px;
   display: flex;
   justify-content: space-between;
