--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -9,26 +9,26 @@
   box-sizing: border-box;
 }
 
-@media screen and (max-width: 1024px) {
+@media (max-width: 1024px) {
   .header {
     padding-bottom: 48px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .header {
     padding: 28px 28px 48px;
   }
 }
 
-/*@media screen and (max-width: 680px) {
+@media (max-width: 470px) {
   .header {
-    max-width: none;
+    max-width: 470px;
     padding: 16px 16px 48px;
   }
-}*/
+}
 
-@media screen and (max-width: 320px) {
+@media (max-width: 320px) {
   .header {
     padding: 16px 16px 48px;
   }
