--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -26,6 +26,6 @@ line-height: 76px;
   .place__title {
     font-size: 32px;
     line-height: 35px;
-    padding: 0 16px 0;
+    padding: 0 0 0;
   }
 }
