--- a/blocks/place/__website/_link/place__website_link.css
+++ b/blocks/place/__website/_link/place__website_link.css
@@ -10,6 +10,7 @@
   text-decoration-line: underline;
   color: #FFFFFF;
   transition: opacity .3s ease;
+  max-width: 240px;
 }
 
 .place__website_link:hover {
