--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -1,24 +1,32 @@
 .places {
-  max-width: 984px;
+  max-width: 1280px;
   padding: 0 148px 92px;
-  
+  box-sizing: border-box;
+  margin: 0 auto;
 }
 
-@media screen and (max-width: 1024px) {
+@media (max-width: 1024px) {
   .places {
-    max-width: 928px;
+    max-width: 1024px;
     padding: 0 48px 92px;
   }
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
   .places {
-    max-width: 720px;
+    max-width: 768px;
     padding: 0 24px 90px;
   }
 }
 
-@media screen and (max-width: 320px) {
+@media (max-width: 619px) {
+  .places {
+    max-width: 619px;
+    padding: 0 12 66px;
+  }
+}
+
+@media (max-width: 320px) {
   .places {
     max-width: 320px;
     padding: 0 0 66px;
