--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -1,15 +1,20 @@
 .cover__overlay {
   /* __overlay */
+  margin: 0 auto;
   min-height: 740px;
-  display: block;
-  background: url(../../../images/cover-trains.jpg);
+  max-width: 1184px;
+  display: flex;
+  flex-direction: column;
+  background-image: url(../../../images/cover-trains.jpg);
+  background-repeat: no-repeat;
   background-size: cover;
   box-sizing: border-box;
+  justify-content: center;
+  text-align: center;
   position: relative;
   z-index: 0;
   color: #FFFFFF;
   text-decoration: none;
-  text-align: center;
 }
 
 .cover__overlay::before {
@@ -38,6 +43,12 @@
 @media screen and (max-width: 768px) {
   .cover__overlay {
     min-height: 480px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .cover__overlay {
+    min-height: 380px;
   }
 }
 
