--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,40 +1,23 @@
 .cover__subtitle {
   /* __subtitle */
-  padding: 0;
-  margin: 0;
+  padding: 32px 0 0;
   max-width: 360px;
-  position: absolute;
-  top: 429px;
-  left: 412px;
+  margin: 0 auto;
+  align-items: center;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
   /* or 122% */
   text-align: center;
-  z-index: 1;
 }
 
-@media screen and (max-width: 1024px) {
-  .cover__subtitle{
-    top: 379px;
-    left: 332px;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .cover__subtitle{
-    top: 299px;
-    left: 204px;
-  }
-}
-
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 720px) {
   .cover__subtitle{
     max-width: 288px;
-    top: 119px;
-    left: 16px;
+    padding: 0 16px 0;
     font-size: 14px;
     line-height: 16px;
   }
 }
+
