--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -8,6 +8,11 @@
 /* identical to box height, or 112% */
   color: #FFFFFF;
   text-decoration-line: none;
+  transition: opacity .3s ease;
+}
+
+.place__website_link:hover {
+  opacity: .8;
 }
 
 .footer__link:last-child {
@@ -15,14 +20,6 @@
 }
 
 @media screen and (max-width: 682px) {
-  .footer__link {
-    font-size: 24px;
-    line-height: 24px;
-    padding: 0 0 32px;
-  }
-}
-
-@media screen and (max-width: 320px) {
   .footer__link {
     font-size: 24px;
     line-height: 24px;
