--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,14 +1,13 @@
 .lead {
   margin: 0 auto;
-  max-width: 984px;
+  max-width: 1280px;
   padding: 0 148px 92px;
-  
- 
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 1024px) {
   .lead {
-    max-width: 928px;
+    max-width: 1024px;
     padding: 0 48px 92px;
   }
 }
@@ -22,7 +21,7 @@
 
 @media screen and (max-width: 320px) {
   .lead {
-    max-width: none;
+    max-width: 320px;
     padding: 0 2px 64px;
   }
 }
