--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,4 +1,4 @@
-.place__website_link {
+.place__link {
   /* __link */
   margin: 0;
   padding: 0;
@@ -6,7 +6,6 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  /* identical to box height, or 122% */
   text-decoration-line: underline;
   color: #FFFFFF;
   transition: opacity .3s ease;
