--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -1,4 +1,4 @@
-.place__website_url-heading {
+.place__url-heading {
   /* __url-heading */
   margin: 0;
   padding: 0 0 12px;
@@ -6,7 +6,6 @@
   font-weight: 400;
   font-size: 12px;
   line-height: 12px;
-  /* identical to box height, or 100% */
   color: #AAAAAA;
   max-width: 240px;
 }
