--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,10 +1,22 @@
 .lead__caption {
   padding: 0;
   margin: 0;
-  max-width: 158px;
   font-style: normal;
   font-weight: 400;
   font-size: 10px;
   line-height: 14px;
+  letter-spacing: 0.15em;
   text-transform: uppercase;
+}
+
+@media (max-width: 768px) {
+  .lead__caption {
+    padding-left: 24px;
+  }
+}
+
+@media (max-width: 320px) {
+  .lead__caption {
+    padding-left: 16px;
+  }
 }
