--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -11,6 +11,7 @@ line-height: 76px;
 
 @media screen and (max-width: 768px) {
   .place__title {
+    max-width: 330px;
     font-size: 42px;
     line-height: 46px;
   }
@@ -20,6 +21,6 @@ line-height: 76px;
   .place__title {
     font-size: 32px;
     line-height: 35px;
-    padding: 0 0 0;
+    padding: 0 16px 0;
   }
 }
