--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -1,9 +1,8 @@
 .place {
-  max-width: 1280;
+  max-width: 1280px;
   padding-bottom: 80px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: max-content 1fr;
+  grid-template-columns: 460px 1fr;
   gap: 48px 40px;
   box-sizing: border-box;
 }
@@ -15,6 +14,7 @@
 @media (max-width: 1024px) {
   .place {
     max-width: 1024px;
+    grid-template-columns: 440px 1fr;
     gap: 48px 32px;
   }
 }
@@ -22,6 +22,7 @@
 @media (max-width: 768px) {
   .place {
     max-width: 768px;
+    grid-template-columns: 340px 1fr;
     gap: 48px 28px;
     padding-bottom: 73px;
   }
@@ -31,7 +32,6 @@
   .place {
     max-width: 619px;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
     gap: 32px;
     padding-bottom: 50px;
   }
@@ -41,7 +41,6 @@
   .place {
     max-width: 320px;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr;
     gap: 32px;
     padding-bottom: 50px;
   }
