--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,6 +1,7 @@
 .cover {
   /* cover */
   padding: 0 48px 92px;
+  box-sizing: border-box;
 }
 
 @media screen and (max-width: 1024px) {
@@ -17,6 +18,7 @@
 
 @media screen and (max-width: 320px) {
   .cover{
+    max-width: 320px;
     padding: 0 0 64px;
   }
 }
