--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -40,7 +40,7 @@
 @media (max-width: 320px) {
   .place {
     max-width: 320px;
-    grid-template-columns: 1fr;
+    grid-template-columns: 320px;
     gap: 32px;
     padding-bottom: 50px;
   }
