--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -22,7 +22,8 @@
 
 @media screen and (max-width: 320px) {
   .cover__title{
-    max-width: 200px;
+    padding-bottom: 16px;
+    max-width: 280px;
     font-size: 32px;
     line-height: 35px;
   }
