--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,9 +1,11 @@
 .header__logo {
   max-width: 177px;
+  min-height: 52px;
 }
 
 @media (max-width: 320px) {
   .header__logo {
     max-width: 134px;
+    min-height: 42px;
   }
 }
