--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -29,10 +29,10 @@
 
 @media screen and (max-width: 320px) {
   .lead__title {
-    max-width: 280px;
-    margin: 0 16px 16px;
-    padding: 0;
-    font-size: 40px;
+    max-width: 288px;
+    margin: 0 auto;
+    padding: 0 0 16px;
+    font-size: 36px;
     line-height: 44px;
   }
 }
